# pc-commander

./: .gitignore  CMakeLists.txt  README.md
Host/include/arduino_serial/: arduino_serial.h
Host/src/: main.cpp
Host/src/arduino_serial/: arduino_serial.cpp  serial_base64.cpp  serial_crc.cpp  serial_send.cpp  serial_update.cpp
arduino/pc-commander-arduino/: platformio.ini
arduino/pc-commander-arduino/include/button/: button.h
arduino/pc-commander-arduino/include/serial_connection/: serial_connection.h
arduino/pc-commander-arduino/src/: main.cpp  serial_connection.cpp  serial_send.cpp
arduino/pc-commander-arduino/src/button/: button.cpp
arduino/pc-commander-arduino/src/serial_connection/: serial_connection.cpp  serial_send.cpp
include/arduino_serial/: arduino_serial.h
include/windows_actions/: windows_actions.h
src/: arduino_serial.cpp  main.cpp  serial_send.cpp
src/windows_actions/: windows_actions.cpp
